ent/icvcn/grammar.peg.go
package icvcn

// Code generated by peg grammar.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleVirusName
	ruleSpecies
	ruleSpeciesEpithet
	ruleMixedCaseEpithet
	ruleLowercaseEpithetNum
	ruleLowercaseEpithet
	ruleUninomial
	ruleGenus
	ruleGenusSuffix
	ruleSubfamily
	ruleSubfamilySuffix
	ruleFamily
	ruleFamilySuffix
	ruleSuborder
	ruleSuborderSuffix
	ruleOrder
	ruleOrderSuffix
	ruleSubclass
	ruleSubclassSuffix
	ruleClass
	ruleClassSuffix
	ruleSubphylum
	ruleSubphylumSuffix
	rulePhylum
	rulePhylumSuffix
	ruleSubkingdom
	ruleSubkingdomSuffix
	ruleKingdom
	ruleKingdomSuffix
	ruleSubrealm
	ruleSubrealmSuffix
	ruleRealm
	ruleRealmSuffix
	ruleDash
	ruleNum
	ruleLetter
	ruleCapsLetter
	rule_
	ruleSingleSpace
	ruleOtherSpace
	ruleEND
)

var rul3s = [...]string{
	"Unknown",
	"VirusName",
	"Species",
	"SpeciesEpithet",
	"MixedCaseEpithet",
	"LowercaseEpithetNum",
	"LowercaseEpithet",
	"Uninomial",
	"Genus",
	"GenusSuffix",
	"Subfamily",
	"SubfamilySuffix",
	"Family",
	"FamilySuffix",
	"Suborder",
	"SuborderSuffix",
	"Order",
	"OrderSuffix",
	"Subclass",
	"SubclassSuffix",
	"Class",
	"ClassSuffix",
	"Subphylum",
	"SubphylumSuffix",
	"Phylum",
	"PhylumSuffix",
	"Subkingdom",
	"SubkingdomSuffix",
	"Kingdom",
	"KingdomSuffix",
	"Subrealm",
	"SubrealmSuffix",
	"Realm",
	"RealmSuffix",
	"Dash",
	"Num",
	"Letter",
	"CapsLetter",
	"_",
	"SingleSpace",
	"OtherSpace",
	"END",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type Parser struct {
	Buffer string
	buffer []rune
	rules  [42]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *Parser) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *Parser) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *Parser
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *Parser) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *Parser) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func (p *Parser) SprintSyntaxTree() string {
	var bldr strings.Builder
	p.WriteSyntaxTree(&bldr)
	return bldr.String()
}

func Pretty(pretty bool) func(*Parser) error {
	return func(p *Parser) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*Parser) error {
	return func(p *Parser) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *Parser) Init(options ...func(*Parser) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 VirusName <- <((Species / Uninomial) _? END)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				{
					position2, tokenIndex2 := position, tokenIndex
					if !_rules[ruleSpecies]() {
						goto l3
					}
					goto l2
				l3:
					position, tokenIndex = position2, tokenIndex2
					if !_rules[ruleUninomial]() {
						goto l0
					}
				}
			l2:
				{
					position4, tokenIndex4 := position, tokenIndex
					if !_rules[rule_]() {
						goto l4
					}
					goto l5
				l4:
					position, tokenIndex = position4, tokenIndex4
				}
			l5:
				if !_rules[ruleEND]() {
					goto l0
				}
				add(ruleVirusName, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 Species <- <(Genus _ SpeciesEpithet)> */
		func() bool {
			position6, tokenIndex6 := position, tokenIndex
			{
				position7 := position
				if !_rules[ruleGenus]() {
					goto l6
				}
				if !_rules[rule_]() {
					goto l6
				}
				if !_rules[ruleSpeciesEpithet]() {
					goto l6
				}
				add(ruleSpecies, position7)
			}
			return true
		l6:
			position, tokenIndex = position6, tokenIndex6
			return false
		},
		/* 2 SpeciesEpithet <- <(MixedCaseEpithet / LowercaseEpithetNum / LowercaseEpithet)> */
		func() bool {
			position8, tokenIndex8 := position, tokenIndex
			{
				position9 := position
				{
					position10, tokenIndex10 := position, tokenIndex
					if !_rules[ruleMixedCaseEpithet]() {
						goto l11
					}
					goto l10
				l11:
					position, tokenIndex = position10, tokenIndex10
					if !_rules[ruleLowercaseEpithetNum]() {
						goto l12
					}
					goto l10
				l12:
					position, tokenIndex = position10, tokenIndex10
					if !_rules[ruleLowercaseEpithet]() {
						goto l8
					}
				}
			l10:
				add(ruleSpeciesEpithet, position9)
			}
			return true
		l8:
			position, tokenIndex = position8, tokenIndex8
			return false
		},
		/* 3 MixedCaseEpithet <- <(CapsLetter / Letter / Num / Dash)+> */
		func() bool {
			position13, tokenIndex13 := position, tokenIndex
			{
				position14 := position
				{
					position17, tokenIndex17 := position, tokenIndex
					if !_rules[ruleCapsLetter]() {
						goto l18
					}
					goto l17
				l18:
					position, tokenIndex = position17, tokenIndex17
					if !_rules[ruleLetter]() {
						goto l19
					}
					goto l17
				l19:
					position, tokenIndex = position17, tokenIndex17
					if !_rules[ruleNum]() {
						goto l20
					}
					goto l17
				l20:
					position, tokenIndex = position17, tokenIndex17
					if !_rules[ruleDash]() {
						goto l13
					}
				}
			l17:
			l15:
				{
					position16, tokenIndex16 := position, tokenIndex
					{
						position21, tokenIndex21 := position, tokenIndex
						if !_rules[ruleCapsLetter]() {
							goto l22
						}
						goto l21
					l22:
						position, tokenIndex = position21, tokenIndex21
						if !_rules[ruleLetter]() {
							goto l23
						}
						goto l21
					l23:
						position, tokenIndex = position21, tokenIndex21
						if !_rules[ruleNum]() {
							goto l24
						}
						goto l21
					l24:
						position, tokenIndex = position21, tokenIndex21
						if !_rules[ruleDash]() {
							goto l16
						}
					}
				l21:
					goto l15
				l16:
					position, tokenIndex = position16, tokenIndex16
				}
				add(ruleMixedCaseEpithet, position14)
			}
			return true
		l13:
			position, tokenIndex = position13, tokenIndex13
			return false
		},
		/* 4 LowercaseEpithetNum <- <(LowercaseEpithet Num)> */
		func() bool {
			position25, tokenIndex25 := position, tokenIndex
			{
				position26 := position
				if !_rules[ruleLowercaseEpithet]() {
					goto l25
				}
				if !_rules[ruleNum]() {
					goto l25
				}
				add(ruleLowercaseEpithetNum, position26)
			}
			return true
		l25:
			position, tokenIndex = position25, tokenIndex25
			return false
		},
		/* 5 LowercaseEpithet <- <(Letter+ (Dash? Letter+)*)> */
		func() bool {
			position27, tokenIndex27 := position, tokenIndex
			{
				position28 := position
				if !_rules[ruleLetter]() {
					goto l27
				}
			l29:
				{
					position30, tokenIndex30 := position, tokenIndex
					if !_rules[ruleLetter]() {
						goto l30
					}
					goto l29
				l30:
					position, tokenIndex = position30, tokenIndex30
				}
			l31:
				{
					position32, tokenIndex32 := position, tokenIndex
					{
						position33, tokenIndex33 := position, tokenIndex
						if !_rules[ruleDash]() {
							goto l33
						}
						goto l34
					l33:
						position, tokenIndex = position33, tokenIndex33
					}
				l34:
					if !_rules[ruleLetter]() {
						goto l32
					}
				l35:
					{
						position36, tokenIndex36 := position, tokenIndex
						if !_rules[ruleLetter]() {
							goto l36
						}
						goto l35
					l36:
						position, tokenIndex = position36, tokenIndex36
					}
					goto l31
				l32:
					position, tokenIndex = position32, tokenIndex32
				}
				add(ruleLowercaseEpithet, position28)
			}
			return true
		l27:
			position, tokenIndex = position27, tokenIndex27
			return false
		},
		/* 6 Uninomial <- <(Genus / Subfamily / Family / Suborder / Order / Subclass / Class / Subphylum / Phylum / Subkingdom / Kingdom / Subrealm / Realm)> */
		func() bool {
			position37, tokenIndex37 := position, tokenIndex
			{
				position38 := position
				{
					position39, tokenIndex39 := position, tokenIndex
					if !_rules[ruleGenus]() {
						goto l40
					}
					goto l39
				l40:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleSubfamily]() {
						goto l41
					}
					goto l39
				l41:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleFamily]() {
						goto l42
					}
					goto l39
				l42:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleSuborder]() {
						goto l43
					}
					goto l39
				l43:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleOrder]() {
						goto l44
					}
					goto l39
				l44:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleSubclass]() {
						goto l45
					}
					goto l39
				l45:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleClass]() {
						goto l46
					}
					goto l39
				l46:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleSubphylum]() {
						goto l47
					}
					goto l39
				l47:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[rulePhylum]() {
						goto l48
					}
					goto l39
				l48:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleSubkingdom]() {
						goto l49
					}
					goto l39
				l49:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleKingdom]() {
						goto l50
					}
					goto l39
				l50:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleSubrealm]() {
						goto l51
					}
					goto l39
				l51:
					position, tokenIndex = position39, tokenIndex39
					if !_rules[ruleRealm]() {
						goto l37
					}
				}
			l39:
				add(ruleUninomial, position38)
			}
			return true
		l37:
			position, tokenIndex = position37, tokenIndex37
			return false
		},
		/* 7 Genus <- <(CapsLetter (!GenusSuffix Letter)+ GenusSuffix)> */
		func() bool {
			position52, tokenIndex52 := position, tokenIndex
			{
				position53 := position
				if !_rules[ruleCapsLetter]() {
					goto l52
				}
				{
					position56, tokenIndex56 := position, tokenIndex
					if !_rules[ruleGenusSuffix]() {
						goto l56
					}
					goto l52
				l56:
					position, tokenIndex = position56, tokenIndex56
				}
				if !_rules[ruleLetter]() {
					goto l52
				}
			l54:
				{
					position55, tokenIndex55 := position, tokenIndex
					{
						position57, tokenIndex57 := position, tokenIndex
						if !_rules[ruleGenusSuffix]() {
							goto l57
						}
						goto l55
					l57:
						position, tokenIndex = position57, tokenIndex57
					}
					if !_rules[ruleLetter]() {
						goto l55
					}
					goto l54
				l55:
					position, tokenIndex = position55, tokenIndex55
				}
				if !_rules[ruleGenusSuffix]() {
					goto l52
				}
				add(ruleGenus, position53)
			}
			return true
		l52:
			position, tokenIndex = position52, tokenIndex52
			return false
		},
		/* 8 GenusSuffix <- <((('v' 'i' 'r' 'u' 's') / ('v' 'i' 'r' 'o' 'i' 'd') / ('s' 'a' 't' 'e' 'l' 'l' 'i' 't' 'e') / ('v' 'i' 'r' 'i' 'f' 'o' 'r' 'm')) !Letter)> */
		func() bool {
			position58, tokenIndex58 := position, tokenIndex
			{
				position59 := position
				{
					position60, tokenIndex60 := position, tokenIndex
					if buffer[position] != rune('v') {
						goto l61
					}
					position++
					if buffer[position] != rune('i') {
						goto l61
					}
					position++
					if buffer[position] != rune('r') {
						goto l61
					}
					position++
					if buffer[position] != rune('u') {
						goto l61
					}
					position++
					if buffer[position] != rune('s') {
						goto l61
					}
					position++
					goto l60
				l61:
					position, tokenIndex = position60, tokenIndex60
					if buffer[position] != rune('v') {
						goto l62
					}
					position++
					if buffer[position] != rune('i') {
						goto l62
					}
					position++
					if buffer[position] != rune('r') {
						goto l62
					}
					position++
					if buffer[position] != rune('o') {
						goto l62
					}
					position++
					if buffer[position] != rune('i') {
						goto l62
					}
					position++
					if buffer[position] != rune('d') {
						goto l62
					}
					position++
					goto l60
				l62:
					position, tokenIndex = position60, tokenIndex60
					if buffer[position] != rune('s') {
						goto l63
					}
					position++
					if buffer[position] != rune('a') {
						goto l63
					}
					position++
					if buffer[position] != rune('t') {
						goto l63
					}
					position++
					if buffer[position] != rune('e') {
						goto l63
					}
					position++
					if buffer[position] != rune('l') {
						goto l63
					}
					position++
					if buffer[position] != rune('l') {
						goto l63
					}
					position++
					if buffer[position] != rune('i') {
						goto l63
					}
					position++
					if buffer[position] != rune('t') {
						goto l63
					}
					position++
					if buffer[position] != rune('e') {
						goto l63
					}
					position++
					goto l60
				l63:
					position, tokenIndex = position60, tokenIndex60
					if buffer[position] != rune('v') {
						goto l58
					}
					position++
					if buffer[position] != rune('i') {
						goto l58
					}
					position++
					if buffer[position] != rune('r') {
						goto l58
					}
					position++
					if buffer[position] != rune('i') {
						goto l58
					}
					position++
					if buffer[position] != rune('f') {
						goto l58
					}
					position++
					if buffer[position] != rune('o') {
						goto l58
					}
					position++
					if buffer[position] != rune('r') {
						goto l58
					}
					position++
					if buffer[position] != rune('m') {
						goto l58
					}
					position++
				}
			l60:
				{
					position64, tokenIndex64 := position, tokenIndex
					if !_rules[ruleLetter]() {
						goto l64
					}
					goto l58
				l64:
					position, tokenIndex = position64, tokenIndex64
				}
				add(ruleGenusSuffix, position59)
			}
			return true
		l58:
			position, tokenIndex = position58, tokenIndex58
			return false
		},
		/* 9 Subfamily <- <(CapsLetter (!SubfamilySuffix Letter)+ SubfamilySuffix)> */
		func() bool {
			position65, tokenIndex65 := position, tokenIndex
			{
				position66 := position
				if !_rules[ruleCapsLetter]() {
					goto l65
				}
				{
					position69, tokenIndex69 := position, tokenIndex
					if !_rules[ruleSubfamilySuffix]() {
						goto l69
					}
					goto l65
				l69:
					position, tokenIndex = position69, tokenIndex69
				}
				if !_rules[ruleLetter]() {
					goto l65
				}
			l67:
				{
					position68, tokenIndex68 := position, tokenIndex
					{
						position70, tokenIndex70 := position, tokenIndex
						if !_rules[ruleSubfamilySuffix]() {
							goto l70
						}
						goto l68
					l70:
						position, tokenIndex = position70, tokenIndex70
					}
					if !_rules[ruleLetter]() {
						goto l68
					}
					goto l67
				l68:
					position, tokenIndex = position68, tokenIndex68
				}
				if !_rules[ruleSubfamilySuffix]() {
					goto l65
				}
				add(ruleSubfamily, position66)
			}
			return true
		l65:
			position, tokenIndex = position65, tokenIndex65
			return false
		},
		/* 10 SubfamilySuffix <- <((('v' 'i' 'r' 'i' 'n' 'a' 'e') / ('v' 'i' 'r' 'o' 'i' 'd' 'i' 'n' 'a' 'e') / ('s' 'a' 't' 'e' 'l' 'l' 'i' 't' 'i' 'n' 'a' 'e') / ('v' 'i' 'r' 'i' 'f' 'o' 'r' 'm' 'i' 'n' 'a' 'e')) !Letter)> */
		func() bool {
			position71, tokenIndex71 := position, tokenIndex
			{
				position72 := position
				{
					position73, tokenIndex73 := position, tokenIndex
					if buffer[position] != rune('v') {
						goto l74
					}
					position++
					if buffer[position] != rune('i') {
						goto l74
					}
					position++
					if buffer[position] != rune('r') {
						goto l74
					}
					position++
					if buffer[position] != rune('i') {
						goto l74
					}
					position++
					if buffer[position] != rune('n') {
						goto l74
					}
					position++
					if buffer[position] != rune('a') {
						goto l74
					}
					position++
					if buffer[position] != rune('e') {
						goto l74
					}
					position++
					goto l73
				l74:
					position, tokenIndex = position73, tokenIndex73
					if buffer[position] != rune('v') {
						goto l75
					}
					position++
					if buffer[position] != rune('i') {
						goto l75
					}
					position++
					if buffer[position] != rune('r') {
						goto l75
					}
					position++
					if buffer[position] != rune('o') {
						goto l75
					}
					position++
					if buffer[position] != rune('i') {
						goto l75
					}
					position++
					if buffer[position] != rune('d') {
						goto l75
					}
					position++
					if buffer[position] != rune('i') {
						goto l75
					}
					position++
					if buffer[position] != rune('n') {
						goto l75
					}
					position++
					if buffer[position] != rune('a') {
						goto l75
					}
					position++
					if buffer[position] != rune('e') {
						goto l75
					}
					position++
					goto l73
				l75:
					position, tokenIndex = position73, tokenIndex73
					if buffer[position] != rune('s') {
						goto l76
					}
					position++
					if buffer[position] != rune('a') {
						goto l76
					}
					position++
					if buffer[position] != rune('t') {
						goto l76
					}
					position++
					if buffer[position] != rune('e') {
						goto l76
					}
					position++
					if buffer[position] != rune('l') {
						goto l76
					}
					position++
					if buffer[position] != rune('l') {
						goto l76
					}
					position++
					if buffer[position] != rune('i') {
						goto l76
					}
					position++
					if buffer[position] != rune('t') {
						goto l76
					}
					position++
					if buffer[position] != rune('i') {
						goto l76
					}
					position++
					if buffer[position] != rune('n') {
						goto l76
					}
					position++
					if buffer[position] != rune('a') {
						goto l76
					}
					position++
					if buffer[position] != rune('e') {
						goto l76
					}
					position++
					goto l73
				l76:
					position, tokenIndex = position73, tokenIndex73
					if buffer[position] != rune('v') {
						goto l71
					}
					position++
					if buffer[position] != rune('i') {
						goto l71
					}
					position++
					if buffer[position] != rune('r') {
						goto l71
					}
					position++
					if buffer[position] != rune('i') {
						goto l71
					}
					position++
					if buffer[position] != rune('f') {
						goto l71
					}
					position++
					if buffer[position] != rune('o') {
						goto l71
					}
					position++
					if buffer[position] != rune('r') {
						goto l71
					}
					position++
					if buffer[position] != rune('m') {
						goto l71
					}
					position++
					if buffer[position] != rune('i') {
						goto l71
					}
					position++
					if buffer[position] != rune('n') {
						goto l71
					}
					position++
					if buffer[position] != rune('a') {
						goto l71
					}
					position++
					if buffer[position] != rune('e') {
						goto l71
					}
					position++
				}
			l73:
				{
					position77, tokenIndex77 := position, tokenIndex
					if !_rules[ruleLetter]() {
						goto l77
					}
					goto l71
				l77:
					position, tokenIndex = position77, tokenIndex77
				}
				add(ruleSubfamilySuffix, position72)
			}
			return true
		l71:
			position, tokenIndex = position71, tokenIndex71
			return false
		},
		/* 11 Family <- <(CapsLetter (!FamilySuffix Letter)+ FamilySuffix)> */
		func() bool {
			position78, tokenIndex78 := position, tokenIndex
			{
				position79 := position
				if !_rules[ruleCapsLetter]() {
					goto l78
				}
				{
					position82, tokenIndex82 := position, tokenIndex
					if !_rules[ruleFamilySuffix]() {
						goto l82
					}
					goto l78
				l82:
					position, tokenIndex = position82, tokenIndex82
				}
				if !_rules[ruleLetter]() {
					goto l78
				}
			l80:
				{
					position81, tokenIndex81 := position, tokenIndex
					{
						position83, tokenIndex83 := position, tokenIndex
						if !_rules[ruleFamilySuffix]() {
							goto l83
						}
						goto l81
					l83:
						position, tokenIndex = position83, tokenIndex83
					}
					if !_rules[ruleLetter]() {
						goto l81
					}
					goto l80
				l81:
					position, tokenIndex = position81, tokenIndex81
				}
				if !_rules[ruleFamilySuffix]() {
					goto l78
				}
				add(ruleFamily, position79)
			}
			return true
		l78:
			position, tokenIndex = position78, tokenIndex78
			return false
		},
		/* 12 FamilySuffix <- <((('v' 'i' 'r' 'i' 'd' 'a' 'e') / ('v' 'i' 'r' 'o' 'i' 'd' 'a' 'e') / ('s' 'a' 't' 'e' 'l' 'l' 'i' 't' 'i' 'd' 'a' 'e') / ('v' 'i' 'r' 'i' 'f' 'o' 'r' 'm' 'i' 'd' 'a' 'e')) !Letter)> */
		func() bool {
			position84, tokenIndex84 := position, tokenIndex
			{
				position85 := position
				{
					position86, tokenIndex86 := position, tokenIndex
					if buffer[position] != rune('v') {
						goto l87
					}
					position++
					if buffer[position] != rune('i') {
						goto l87
					}
					position++
					if buffer[position] != rune('r') {
						goto l87
					}
					position++
					if buffer[position] != rune('i') {
						goto l87
					}
					position++
					if buffer[position] != rune('d') {
						goto l87
					}
					position++
					if buffer[position] != rune('a') {
						goto l87
					}
					position++
					if buffer[position] != rune('e') {
						goto l87
					}
					position++
					goto l86
				l87:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('v') {
						goto l88
					}
					position++
					if buffer[position] != rune('i') {
						goto l88
					}
					position++
					if buffer[position] != rune('r') {
						goto l88
					}
					position++
					if buffer[position] != rune('o') {
						goto l88
					}
					position++
					if buffer[position] != rune('i') {
						goto l88
					}
					position++
					if buffer[position] != rune('d') {
						goto l88
					}
					position++
					if buffer[position] != rune('a') {
						goto l88
					}
					position++
					if buffer[position] != rune('e') {
						goto l88
					}
					position++
					goto l86
				l88:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('s') {
						goto l89
					}
					position++
					if buffer[position] != rune('a') {
						goto l89
					}
					position++
					if buffer[position] != rune('t') {
						goto l89
					}
					position++
					if buffer[position] != rune('e') {
						goto l89
					}
					position++
					if buffer[position] != rune('l') {
						goto l89
					}
					position++
					if buffer[position] != rune('l') {
						goto l89
					}
					position++
					if buffer[position] != rune('i') {
						goto l89
					}
					position++
					if buffer[position] != rune('t') {
						goto l89
					}
					position++
					if buffer[position] != rune('i') {
						goto l89
					}
					position++
					if buffer[position] != rune('d') {
						goto l89
					}
					position++
					if buffer[position] != rune('a') {
						goto l89
					}
					position++
					if buffer[position] != rune('e') {
						goto l89
					}
					position++
					goto l86
				l89:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('v') {
						goto l84
					}
					position++
					if buffer[position] != rune('i') {
						goto l84
					}
					position++
					if buffer[position] != rune('r') {
						goto l84
					}
					position++
					if buffer[position] != rune('i') {
						goto l84
					}
					position++
					if buffer[position] != rune('f') {
						goto l84
					}
					position++
					if buffer[position] != rune('o') {
						goto l84
					}
					position++
					if buffer[position] != rune('r') {
						goto l84
					}
					position++
					if buffer[position] != rune('m') {
						goto l84
					}
					position++
					if buffer[position] != rune('i') {
						goto l84
					}
					position++
					if buffer[position] != rune('d') {
						goto l84
					}
					position++
					if buffer[position] != rune('a') {
						goto l84
					}
					position++
					if buffer[position] != rune('e') {
						goto l84
					}
					position++
				}
			l86:
				{
					position90, tokenIndex90 := position, tokenIndex
					if !_rules[ruleLetter]() {
						goto l90
					}
					goto l84
				l90:
					position, tokenIndex = position90, tokenIndex90
				}
				add(ruleFamilySuffix, position85)
			}
			return true
		l84:
			position, tokenIndex = position84, tokenIndex84
			return false
		},
